--- a/index.html
+++ b/index.html
@@ -1,40 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="./icons/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Air Jordan</title>
-</head>
-<body>
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./icons/favicon.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Air Jordan</title>
+  </head>
+  <body>
     <header>
-      <div class="logo">AIR<span>TIGHT</span></div>
-      <nav>
-        <span>EN</span>
-        <span>AU</span>
-      </nav>
+      <img src="./icons/Air Tight Logo.svg" alt="" />
+      <button class="menu">
+        <img src="./icons/Menu.svg" alt="" />
+      </button>
+      <img src="./icons/Language.svg" alt="" />
     </header>
-    <main>
-      <div class="content">
-        <h1>
-          <span>03</span> AIR JORDAN <br /><span>VARSITY PURPLE</span>
-        </h1>
-        <button class="rotate-btn">360°</button>
-        <p>SCROLL TO EXPLORE</p>
+    <h1>AIR JORDAN 
+        <img src="./icons/Varsity Purple.svg" alt="">
+    </h1>
+    <div class="slide-info"></div>
+
+    <img class="bubbles" src="./icons/Bubbles.svg" alt="" />
+    <img class="bubbles2" src="./icons/Bubbles (2).svg" alt="" />
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="./images/Aire Jordan Nike.svg" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img
+            style="width: 650px; margin: 10px; transform: rotate(-10deg)"
+            src="./images/Air Bottom.svg"
+            alt=""
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./images/Air Left.svg"
+            alt=""
+            style="width: 650px; margin: 10px 0 50px 0"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            style="width: 650px; margin: 10px 0 50px 0"
+            src="./images/6384773976-removebg-preview-removebg-preview.png"
+            alt=""
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            style="width: 800px; margin: 10px 0 50px 0"
+            src="./images/16138601_30775365_1000-removebg.png"
+            alt=""
+          />
+        </div>
       </div>
-      <div class="shoe">
-        <img src="shoe.png" alt="Air Jordan" />
-      </div>
-    </main>
+      <div class="swiper-pagination"></div>
+    </div>
+    <svg
+      class="bg"
+      width="700"
+      height="240"
+      viewBox="0 0 809 273"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <g opacity="0.7" filter="url(#filter0_d_3_252)">
+        <ellipse
+          cx="404.437"
+          cy="38.2717"
+          rx="326.08"
+          ry="30.0912"
+          transform="rotate(3.95675 404.437 38.2717)"
+          fill="white"
+          fill-opacity="0.01"
+        />
+      </g>
+      <defs>
+        <filter
+          id="filter0_d_3_252"
+          x="0.302193"
+          y="0.753464"
+          width="808.269"
+          height="271.512"
+          filterUnits="userSpaceOnUse"
+          color-interpolation-filters="sRGB"
+        >
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feColorMatrix
+            in="SourceAlpha"
+            type="matrix"
+            values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+            result="hardAlpha"
+          />
+          <feOffset dy="117.65" />
+          <feGaussianBlur stdDeviation="39.4127" />
+          <feColorMatrix
+            type="matrix"
+            values="0 0 0 0 0.140972 0 0 0 0 0.172375 0 0 0 0 0.233333 0 0 0 0.3 0"
+          />
+          <feBlend
+            mode="normal"
+            in2="BackgroundImageFix"
+            result="effect1_dropShadow_3_252"
+          />
+          <feBlend
+            mode="normal"
+            in="SourceGraphic"
+            in2="effect1_dropShadow_3_252"
+            result="shape"
+          />
+        </filter>
+      </defs>
+    </svg>
+
+    <div class="circle">
+        <img src="./icons/360°.svg" alt="">
+    </div>
+    
     <footer>
-      <div class="thumbnails">
-        <img src="thumb1.png" alt="Thumbnail 1" />
-        <img src="thumb2.png" alt="Thumbnail 2" />
+      <div class="icons">
+        <img src="./icons/Search.svg" alt="" />
+        <img src="./icons/Volume.svg" alt="" />
+      </div>
+      <div class="scroll">
+        <b>Scroll to Explore</b>
+        <img src="./icons/Line.svg" alt="" />
+      </div>
+      <div class="nav">
+        <div class="shoe">
+          <img src="./images/Air Left.svg" alt="" />
+          <img src="./images/Air Bottom.svg" alt="" />
+        </div>
+        <img src="./icons/Pagination.svg" alt="" />
       </div>
     </footer>
-  </div>
-  <script src="./app.js"></script>
-</body>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
